[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/light.png" type="Texture" id=1]
[ext_resource path="res://Agents/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Dwarf Sprite Sheet 1.3v-export.png" type="Texture" id=3]
[ext_resource path="res://UserInterface/UserInterface.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Audio/wumpus4.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Audio/gold.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Audio/pit.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/Audio/wumpus.wav" type="AudioStream" id=8]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 192, 96 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 192, 96 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 192, 96 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 576, 0, 192, 96 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 768, 0, 192, 96 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 31.9687, 31.8344 )

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 0.5, 0.5 )
z_index = 1
collision_mask = 2
script = ExtResource( 2 )
win_scene = "res://Screens/WinScreen.tscn"
died_scene = "res://Screens/DieScreen.tscn"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UserInterface" parent="CanvasLayer" instance=ExtResource( 4 )]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 32, 15.8927 )
scale = Vector2( 0.964923, 0.976615 )
frames = SubResource( 6 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 32.5946, 32.5946 )
shape = SubResource( 7 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.4, 0.4 )
limit_left = -280
limit_top = -55
limit_right = 220
limit_bottom = 250
limit_smoothed = true

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 32, 32 )
scale = Vector2( 2, 2 )
cast_to = Vector2( 0, 64 )
collision_mask = 2

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 32.5946, 32.5946 )
shape = SubResource( 7 )

[node name="MainTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0

[node name="GoldTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0

[node name="Trap" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -15.0

[node name="Wumpus" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -15.0

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 32.0724, 31.1814 )
texture = ExtResource( 1 )
texture_scale = 0.35
energy = 0.7

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
